--- a/ETL/db_to_pin/ETL_db_to_pin.Rmd
+++ b/ETL/db_to_pin/ETL_db_to_pin.Rmd
@@ -14,24 +14,26 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(odbc)
 
-pins::board_register("rsconnect", 
-                     server = "https://colorado.rstudio.com/rsc/",
-                     key = Sys.getenv("RSTUDIOCONNECT_API_KEY"))
 con <- dbConnect(odbc::odbc(), "Content DB", timeout = 10)
 ```
 
 # Connect to Database Data
 ```{r, download}
-df <- tbl(con, "bike_raw_data")
+df_con <- tbl(con, "bike_raw_data")
 ```
 
 # Clean data
 ```{r}
-(df <- df %>% 
+(df <- df_con %>% 
    transmute(id = station_id, 
              hour = hour(time), 
+             date = date(time), 
+             month = month(time),
              n_bikes = num_bikes_available) %>%
-   collect())
+   collect() %>%
+   # Remove stations that no longer exist
+   filter(id %in% stats$station_id) %>%
+   mutate(dow = weekdays(date))) 
 ```
 
 # Add location data
@@ -44,8 +46,5 @@ stat <- pins::pin_get("alex.gold/bike_station_info")
 
 # Pin
 ```{r}
-pins::pin(df, 
-          "bike_model_data", 
-          "Capitol bikeshare station status data", 
-          board = 'rsconnect')
+DBI::dbWriteTable(con, "bike_model_data", df, overwrite = TRUE)
 ```
