--- a/write_readme.Rmd
+++ b/write_readme.Rmd
@@ -18,17 +18,38 @@ The entire scheme looks like this:
 # Content in this App
 ```{r, echo = FALSE}
 tibble::tribble(
-  ~name, ~url, ~refresh, ~desc,
-  "Raw Data Ingest Script", "", "Every 20 Minutes", "Writes data from API calls into `bike_raw_data` table in postgres.",
-  "Clean Data Script", "", "Daily (4 am)", "Cleans `bike_raw_data` for modeling, writes into `bike_model_data`.",
-  "Clean Station Metadata Script", "", "Weekly (Sundays)", "Ingests station metadata and saves to a pin (names, lat/long).",
-  "Data Split Script", "", "Daily (5 am)", "Creates a training/test split for the data for models to use, saves to a pin.",
-  "R XGB Model Build", "", "Daily (6 am)", "Rebuilds model based on training/test split indicated by Data Split Script, writes into pin.", 
-  "Model Metrics Script", "", "Daily (8 am)", "Writes `bike_test_data` and `bike_predictions` postgres tables, writes pin of goodness-of-fit metrics.", 
-  "Model Performance App", "", NA, "Displays model performance metrics.", 
-  "Model API", "", NA, "Serves model predictions via Plumber API.", 
-  "Bike Prediction App", "", NA, "Displays predictions from App.", 
-  "bikeHelpR Package", "", NA, "An R package of helper functions, rebuilt on new commits in [internal repo](https://demo.rstudiopm.com/client/#/repos/8/packages/bikeHelpR) on demo.rstudiopm.com.") %>%
+  ~name, ~refresh, ~desc,
+  "Raw Data Ingest Script", "Every 20 Minutes", "Writes data from API calls into `bike_raw_data` table in postgres.",
+  "Clean Data Script", "Daily (4 am)", "Cleans `bike_raw_data` for modeling, writes into `bike_model_data`.",
+  "Clean Station Metadata Script",  "Weekly (Sundays)", "Ingests station metadata and saves to a pin (names, lat/long).",
+  "Data Split Script", "Daily (5 am)", "Creates a training/test split for the data for models to use, saves to a pin.",
+  "R XGB Model Train", "Daily (6 am)", "Retrains model based on training/test split indicated by Data Split Script, writes into pin.", 
+  "Model Metrics Script", "Daily (8 am)", "Writes `bike_test_data` and `bike_predictions` postgres tables, writes pin of goodness-of-fit metrics.", 
+  "Model Performance App", NA, "Displays model performance metrics.", 
+  "Model API", NA, "Serves model predictions via Plumber API.", 
+  "Bike Prediction App",  NA, "Displays predictions from App.", 
+  "bikeHelpR Package", NA, "An R package of helper functions, rebuilt on new commits in [internal repo](https://demo.rstudiopm.com/client/#/repos/8/packages/bikeHelpR) on demo.rstudiopm.com.") %>%
+  bind_cols(
+    tibble::tribble(
+      ~access_url, ~code_url, ~pin_url,
+      "bike_intake_raw", "blob/master/ETL/intake_raw/ETL_raw_into_db.Rmd", NA,
+      "bike_clean_raw", "blob/master/ETL/clean_raw/ETL_clean_raw.Rmd", NA,
+      "bike_station_data_ingest", "blob/master/ETL/station_api_to_pin/ETL_station_api_to_pin.Rmd", "bike_station_info",
+      "bike_data_split", , "bike_model_params",
+      "bike_rxgb_train", , "bike_rxgb",
+      "bike_model_metrics", , "bike_err_dat",
+      "bike_model_performance", 
+      "",
+      "",
+      "",
+      "", 
+      "https://demo.rstudiopm.com/client/#/repos/8/packages/bikeHelpR", "", NA 
+    )
+  )
+  
+rsc_url <- "https://colorado.rstudio.com/rsc"
+github <- "https://github.com/rstudio/bike_predict"
+  
   dplyr::transmute(
     Content = glue::glue("[{name}]({url})"), 
     `Refresh Frequency` = refresh,
