--- a/Model/model_quality_metrics/model_quality_metrics.Rmd
+++ b/Model/model_quality_metrics/model_quality_metrics.Rmd
@@ -14,13 +14,13 @@ library(xgboost)
 
 
 ```{r}
-con <- DBI::dbConnect(odbc::odbc(), "Content DB")
+con <<- DBI::dbConnect(odbc::odbc(), "Content DB")
 pins::board_register_rsconnect(server = "https://colorado.rstudio.com/rsc",
                                key = Sys.getenv("RSTUDIOCONNECT_API_KEY"))
 ```
 
 # Load Models and Test Data
-```{r}
+```{r load_mod_and_data}
 mods <- list(r_xgb = pins::pin_get("bike_model_rxgb", board = "rsconnect"))
 mod_params <- pins::pin_get("bike_model_params", board = "rsconnect")
 test <- bike_test_dat(con, mod_params$split_date) %>%
@@ -29,7 +29,7 @@ test <- bike_test_dat(con, mod_params$split_date) %>%
 
 # Goodness of Fit
 Write predictions to database and goodness of fit metrics to pin
-```{r}
+```{r write_preds}
 purrr::imap_dfr(mods, bike_mod_results, test, prep_r_xgb_mat)
 ```
 
