--- a/Model/model_quality_metrics/model_quality_metrics.Rmd
+++ b/Model/model_quality_metrics/model_quality_metrics.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Model Quality Assessment"
 author: "Alex Gold"
-date: "12/6/2019"
+date: "`r Sys.time()`"
 output: html_document
 ---
 
