--- a/ETL/clean_raw/ETL_clean_raw.Rmd
+++ b/ETL/clean_raw/ETL_clean_raw.Rmd
@@ -29,16 +29,23 @@ stats <- dplyr::tbl(con, "bike_station_info")
 
 # Clean data
 ```{r}
-(df <- df_con %>% 
-    # Clean data
-    transmute(id = station_id, 
-              hour = hour(time), 
-              date = date(time), 
-              month = month(time),
-              n_bikes = num_bikes_available, 
-              dow = to_char(time, "dy")) %>%
-    # Add location
-    left_join(select(stats, id = station_id, lat, lon)) %>%
-    # Write back to db
-    compute("bike_model_data", overwrite = TRUE))
+db_drop_table(con, "bike_model_data", force = TRUE)
+query <- df_con %>% 
+    group_by(
+        id = station_id, 
+        hour = hour(time), 
+        date = date(time), 
+        month = month(time), 
+        dow = TRIM(to_char(time, "Day"))
+    ) %>%
+    summarize(
+        n_bikes = mean(num_bikes_available, na.rm = TRUE)
+    ) %>%
+    inner_join(
+        select(stats, id = station_id, lat, lon)
+    ) %>%
+    dbplyr::sql_render() %>%
+    stringr::str_replace("SELECT", "CREATE TABLE bike_model_data AS SELECT")
+dbSendQuery(con, query)
+tbl(con, "bike_model_data")
 ```
