--- a/README.Rmd
+++ b/README.Rmd
@@ -15,9 +15,9 @@ This repository contains an example of using [RStudio Connect](https://rstudio.c
 
 # Who This is For
 
-Both *data scientists* and *R admins* in machine-learning heavy contexts may find this demo interesting. One indication that someone might find this interesting is that they're using the word "production" describing their pain points.
+Both *data scientists* and *R admins* in machine-learning heavy contexts may find this demo interesting. People who describe _production-izing_ or _deploying_ content as pain points may find this useful. 
 
-Some of the customer pain points that content in this repo can help address are listed below along with some of the relevant assets here.
+Some particular pain points this could address:
 
 ### I am trying to deploy/productionize a machine learning model
 People mean MANY different things by "productionize" a machine learning model. Very often, that just means making the output of a model available to another process. The most common paths to making model output accessible to other tools are writing to a database, writing to a flat file (or pin), or providing real-time predictions with a plumber API.
@@ -31,8 +31,6 @@ For relatively advanced model deployments, users may be interested in horseracin
 Another piece embedded in the background of deploying/productionizing a model is making the entire pipeline robust to (for example) someone accidentally pushing the deploy button when they shouldn't. A really good solution to this is programmatic deployment. This entire repository is deployed from a github repo, using the functionality in RStudio Connect. One really cool problem this can solve is deploying dev versions of content, which can easily be accomplished using a long-running deployed dev branch. There's an example of this in the Dev Client App.
 
 Another piece of this is making the underlying R functions more robust, see the next point for more on that.
-
-#TODO -- add a python model via reticulate
 
 ### I have a bunch of functions I need to use, but it's a pain
 Most R users know that the correct solution is to put their R functions into a package if they'll be reused -- or even if they just need to be well-documented and tested. This repository includes a package of helper functions that do a variety of tasks.
@@ -56,10 +54,10 @@ Some examples of objects that are likely to be a good fit for a pin:
 - metadata files from some sort of machine-readable ID to human-readable details
 
 ### I've got this CRON job that does some ETL/data processing/creates a bunch of files
-Scheduled RMarkdown isn't *always* the best solution here (for example, robust SQL pipelines in another tool definitely don't need to be replaced with scheduled RMarkdown), but if the user is running R code, scheduled RMarkdown is way easier than anything else.
+Scheduled R Markdown isn't *always* the best solution here (for example, robust SQL pipelines in another tool definitely don't need to be replaced with scheduled RMarkdown), but if the user is running R code, scheduled R Markdown is way easier than anything else.
 
 ## What doesn't it do
-This repository shows off a really exciting set of capabilities, combining open-source R and Python with RStudio's professional products. There are a few things it doesn't do (yet) -- but that would be really great to hear if people want them:
+This repository shows off a really exciting set of capabilities, combining open-source R and Python with RStudio's professional products. There are a few things it doesn't do (yet) -- but that I might add, depending on interest:
 
 - Jobs don't depend on another. I've scheduled the jobs so that each will complete by the time another starts, but there are tools in R (like [drake](https://github.com/ropensci/drake)) that allow you to put the entire pipeline into code and make dependencies explicit.
 - Pieces of content must be managed individually -- that includes uploading, permissions, environment variables, and tagging. It is possible to do something more robust via programmatic deployment using the RStudio Connect API, but generic git deployment doesn't support deploying all of the content in a git repo at once.
@@ -110,11 +108,11 @@ tibble::tribble(
     pin_url = ifelse(is.na(pin_url), NA, file.path(rsc_url, pin_url))
   ) %>%
   dplyr::transmute(
-    Content = glue::glue("[{name}]({access_url})"), 
+    Content = glue::glue("[{name}]({access_url})"),
+    `Content Description` = desc,
     Code = glue::glue("[Code]({code_url})"), 
     Pin = ifelse(is.na(pin_url), NA, glue::glue("[{pin}]({pin_url})")),
-    `Refresh Frequency` = refresh,
-    `Content Description` = desc
+    `Refresh Frequency` = refresh
   ) %>%
   knitr::kable()
 ```
