--- a/ETL/data_split/data_split.Rmd
+++ b/ETL/data_split/data_split.Rmd
@@ -10,39 +10,63 @@ library(dplyr)
 library(dbplyr)
 library(bikeHelpR)
 library(recipes)
+library(lubridate)
 ```
 
 ```{r}
 con <- DBI::dbConnect(odbc::odbc(), "Content DB")
 df <- tbl(con, "bike_model_data")
-pins::board_register_rsconnect(server = "https://colorado.rstudio.com/rsc",
-                               key = Sys.getenv("RSTUDIOCONNECT_API_KEY"))
+pins::board_register_rsconnect(
+  server = "https://colorado.rstudio.com/rsc",
+  key = Sys.getenv("RSTUDIOCONNECT_API_KEY")
+)
 ```
 
 ```{r}
 n_days_test <- 2
-dates <- df %>% count(date) %>% pull(date) %>% as.Date()
-split_date <- dates[length(dates) - n_days_test]
-test_dates <- paste0(dates[(length(dates) - (n_days_test - 1)): length(dates)], collapse = " and ")
+months_train <- 6
+dates <- df %>% 
+  count(date) %>%
+  arrange(desc(date)) %>%
+  head(n_days_test + 1) %>%
+  pull(date) %>%
+  as.Date()
 
+split_date <- dates[n_days_test + 1]
+start_train_date <- split_date %m-% months(months_train)
+
+test_dates <- dates[1:(length(dates) - 1)]
+test_dates_str <- paste(test_dates, collapse = " and ")
 
 print(glue::glue(
-  "Using data on or before {split_date} as training, data from {test_dates} to test."
+  "Using data on or before {min(test_dates)} as training, data from {test_dates_str} to test."
 ))
 ```
 
 ```{r}
-train_dat <- bike_train_dat(con, split_date)
+print(glue::glue("Using data between {start_train_date} and {split_date} for training."))
+
+train_dat <- df %>% 
+  dplyr::filter(
+    date <= split_date, 
+    date >= start_train_date
+  ) %>% 
+  dplyr::collect()
+
 recipe <- recipe(n_bikes ~ ., data = train_dat) %>%
   step_dummy(dow) %>%
-  prep(train_dat)
+  prep(train_dat, retain = FALSE)
 ```
 
 ```{r}
-pins::pin(list(train_date = Sys.Date(), 
-               split_date = split_date, 
-               recipe = recipe), 
-          "bike_model_params", "Parameters for Creating Training Dataset", 
-          board = "rsconnect")
+pins::pin(
+  list(
+    train_date = Sys.Date(), 
+    split_date = split_date, 
+    train_start = start_train_date,
+    recipe = recipe), 
+  "bike_model_params", "Parameters for Creating Training Dataset", 
+  board = "rsconnect"
+)
 ```
 
