close db connections in Rmd; pool connections in shiny

--- a/Model/model_quality_metrics/model_quality_metrics.Rmd
+++ b/Model/model_quality_metrics/model_quality_metrics.Rmd
@@ -34,4 +34,6 @@ Write predictions to database and goodness of fit metrics to pin
 purrr::imap_dfr(mods, bike_mod_results, test, prep_r_xgb_mat)
 ```
 
-
+```{r}
+dbDisconnect(con)
+```
