--- a/ETL/station_api_to_pin/ETL_station_api_to_pin.Rmd
+++ b/ETL/station_api_to_pin/ETL_station_api_to_pin.Rmd
@@ -15,8 +15,8 @@ library(tidyverse)
 library(magrittr)
 library(bikeHelpR)
 
-pins::board_register_rsconnect(server = "https://colorado.rstudio.com/rsc",
-                               key = Sys.getenv("RSTUDIOCONNECT_API_KEY"))
+pins::board_register_rsconnect(server = Sys.getenv("CONNECT_SERVER"),
+                               key = Sys.getenv("CONNECT_API_KEY"))
 ```
 
 # Get data from API
