--- a/Model/build_rxgb/build_rxgb.Rmd
+++ b/Model/build_rxgb/build_rxgb.Rmd
@@ -17,8 +17,8 @@ library(xgboost)
 # Get data
 ```{r}
 con <- DBI::dbConnect(odbc::odbc(), "Content DB")
-pins::board_register_rsconnect(server = "https://colorado.rstudio.com/rsc",
-                               key = Sys.getenv("RSTUDIOCONNECT_API_KEY"))
+pins::board_register_rsconnect(server = Sys.getenv("CONNECT_SERVER"),
+                               key = Sys.getenv("CONNECT_API_KEY"))
 ```
 
 
