rsc adds trailing slash

--- a/intro/index.Rmd
+++ b/intro/index.Rmd
@@ -66,8 +66,9 @@ meta() %>%
   meta_viewport() %>% 
   meta_social(
     title = "End-to-end data science with RStudio Connect",
-    url = paste0(Sys.getenv("CONNECT_SERVER"), "/bike-share"),
-    image = paste0(Sys.getenv("CONNECT_SERVER"), "/bike-share", "/arrows.png"),
+    # automatically supplied server url contains trailing slash
+    url = paste0(Sys.getenv("CONNECT_SERVER"), "bike-share"),
+    image = paste0(Sys.getenv("CONNECT_SERVER"), "bike-share", "/arrows.png"),
     image_alt = "Diagram of flow from scheduled jobs to apps",
     twitter_card_type = "summary",
     og_type = "article"
