--- a/Model/model_quality_metrics/model_quality_metrics.Rmd
+++ b/Model/model_quality_metrics/model_quality_metrics.Rmd
@@ -15,20 +15,18 @@ library(dplyr)
 library(xgboost)
 library(yardstick)
 library(tidymodels)
-library(RPostgreSQL)
 ```
 
 
 ```{r}
 con <- DBI::dbConnect(odbc::odbc(), "Content DB")
-pins::board_register_rsconnect(server = Sys.getenv("CONNECT_SERVER"),
-                               key = Sys.getenv("CONNECT_API_KEY"))
+rsc <- pins::board_rsconnect(auth = "envvar")
 ```
 
 # Load model
 
 ```{r load_mod_and_data}
-model_details <- pins::pin_get("bike_model_rxgb", board = "rsconnect")
+model_details <- pins::pin_read(rsc, "alex.gold/bike_model_rxgb")
 model <- model_details$model
 recipe <- model_details$recipe
 train_date <- model_details$train_date
@@ -66,17 +64,12 @@ results <- all_days %>%
 # Write predictions to database
 
 ```{r write_scores}
-db_drop_table(con, "bike_pred_data", force = TRUE)
+# db_drop_table(con, "bike_pred_data", force = TRUE)
 
-con2 <- DBI::dbConnect(
-  RPostgres::Postgres(), 
-  host = "soleng-content-rds1.cloiraotshw4.us-east-1.rds.amazonaws.com",
-  dbname = "rds",
-  user = Sys.getenv("CONTENT_DB_USER"),
-  password = Sys.getenv("CONTENT_DB_PASS")
-)
-  
-RPostgreSQL::dbWriteTable(con2, "bike_pred_data",results)
+
+copy_to(con, results, name = "bike_pred_data")
+ 
+# RPostgreSQL::dbWriteTable(con2, "bike_pred_data",results)
 
 ```
 
@@ -113,5 +106,4 @@ oos_metrics(latest_res$actual, latest_res$preds)
 
 ```{r}
 DBI::dbDisconnect(con)
-RPostgreSQL::dbDisconnect(con2)
 ```
