--- a/content/02-clean-raw/ETL_clean_raw.qmd
+++ b/content/02-clean-raw/ETL_clean_raw.qmd
@@ -1,6 +1,5 @@
 ---
 title: "Clean Analysis Dataset Quarto Version"
-author: "Gagandeep Singh"
 date: "`r Sys.time()`"
 output: html_document
 ---
@@ -9,28 +8,39 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Set up packages and connect to RStudio Connect board
+
 ```{r}
 library(tidyverse)
 library(odbc)
 
 con <- dbConnect(odbc::odbc(), "Content DB", timeout = 10)
-#pins::board_register_rsconnect(server = Sys.getenv("CONNECT_SERVER"),
-#                               key = Sys.getenv("CONNECT_API_KEY"))
+
+pins::board_register_rsconnect(
+  server = Sys.getenv("CONNECT_SERVER"),
+  key = Sys.getenv("CONNECT_API_KEY")
+)
 
 ```
 
 # Connect to Database Data
+
 ```{r, download}
-#DBI::dbWriteTable(con, "bike_station_info", pins::pin_get("alex.gold/bike_station_info"), overwrite = TRUE)
+# DBI::dbWriteTable(
+#   con, 
+#   "bike_station_info", 
+#   pins::pin_get("alex.gold/bike_station_info"), 
+#   overwrite = TRUE
+# )
 
 df_con <- dplyr::tbl(con, "bike_raw_data")
 stats <- dplyr::tbl(con, "bike_station_info")
 ```
 
 # Clean data
+
 ```{r}
-#db_drop_table(con, "bike_model_data", force = TRUE)
+# db_drop_table(con, "bike_model_data", force = TRUE)
+
 query <- df_con %>% 
     group_by(
         id = station_id, 
@@ -47,8 +57,9 @@ query <- df_con %>%
     ) %>%
     dbplyr::sql_render() %>%
     stringr::str_replace("SELECT", "CREATE TABLE bike_model_data AS SELECT")
-#dbSendQuery(con, query)
-#tbl(con, "bike_model_data")
+
+# dbSendQuery(con, query)
+# tbl(con, "bike_model_data")
 ```
 
 ```{r}
